--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "firebase": "^9.18.0"
   }
 }
