--- a/mobile_dev/about_me/android/app/src/main/AndroidManifest.xml
+++ b/mobile_dev/about_me/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
    <application
         android:label="about_me"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@drawable/splash">
         <activity
             android:name=".MainActivity"
             android:exported="true"
