--- a/mobile_dev/about_me/pubspec.yaml
+++ b/mobile_dev/about_me/pubspec.yaml
@@ -41,12 +41,12 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
   flutter_native_splash: ^2.2.19
+  boxicons: ^2.1.3
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: assets/icons/logo_500.png
-  background_color: "#1E1E1E"
+  image_path: assets/icons/logo.png
 
 flutter_native_splash:
   android: true
@@ -54,7 +54,7 @@ flutter_native_splash:
   web: true
 
   image: assets/icons/logo_500.png
-  background_image: assets/img/bg.png
+  color: "#303030"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,7 +77,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_burr.jpeg
+    - assets/images/profile.jpg
+    - assets/icons/logo_500.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
