--- a/mobile_dev/about_me/pubspec.yaml
+++ b/mobile_dev/about_me/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_native_splash: ^2.2.19
   boxicons: ^2.1.3
+  dio: ^4.0.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
